--- a/app/src/main/res/layout/activity_introduce.xml
+++ b/app/src/main/res/layout/activity_introduce.xml
@@ -8,14 +8,28 @@
 
     <Button
         android:id="@+id/bStartMap"
-        android:layout_width="wrap_content"
+        android:layout_width="229dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="439dp"
-        android:layout_marginEnd="216dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="24dp"
-        android:text="Start map"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="86dp"
+        android:layout_marginStart="69dp"
+        android:layout_marginTop="123dp"
+        android:text="Continue"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="322dp"
+        android:layout_height="175dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="133dp"
+        android:gravity="center"
+        android:text="Check the Sun"
+        android:textSize="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
