--- a/app/src/main/res/layout/list_item_info_card.xml
+++ b/app/src/main/res/layout/list_item_info_card.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -171,6 +170,7 @@
             android:background="@android:color/darker_gray" />
 
         <LinearLayout
+            android:id="@+id/bottom_layout"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_margin="6dp"
@@ -188,7 +188,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    app:srcCompat = "@drawable/ic_save" />
+                    app:srcCompat="@drawable/ic_save" />
 
                 <TextView
                     android:id="@+id/textView6"
@@ -212,6 +212,240 @@
             </LinearLayout>
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/details_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:layout_margin="6dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="24"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="21"
+                    app:srcCompat="@drawable/ic_solar_noon" />
+
+                <TextView
+                    android:id="@+id/tv_solar_noon"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="14"
+                    android:gravity="center_vertical"
+                    android:text="@string/text_solar_noon" />
+
+                <TextView
+                    android:id="@+id/tv_solar_noon_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="16"
+                    android:gravity="center"
+                    android:text="TextView" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="24"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="21"
+                    app:srcCompat="@drawable/ic_civil_twilight" />
+
+                <TextView
+                    android:id="@+id/tv_civil_twilight_begin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="14"
+                    android:gravity="center_vertical"
+                    android:text="@string/text_civil_twilight_begin" />
+
+                <TextView
+                    android:id="@+id/tv_civil_twilight_begin_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="16"
+                    android:gravity="center"
+                    android:text="TextView" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="24"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="21"
+                    app:srcCompat="@drawable/ic_civil_twilight" />
+
+                <TextView
+                    android:id="@+id/tv_civil_twilight_end"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="14"
+                    android:gravity="center_vertical"
+                    android:text="@string/text_civil_twilight_end" />
+
+                <TextView
+                    android:id="@+id/tv_civil_twilight_end_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="16"
+                    android:gravity="center"
+                    android:text="TextView" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="24"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="21"
+                    app:srcCompat="@drawable/ic_astronomical_twilight" />
+
+                <TextView
+                    android:id="@+id/tv_astronomical_twilight_begin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="14"
+                    android:gravity="center_vertical"
+                    android:text="@string/text_astronomical_twilight_begin" />
+
+                <TextView
+                    android:id="@+id/tv_astronomical_twilight_begin_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="16"
+                    android:gravity="center"
+                    android:text="TextView" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="24"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="21"
+                    app:srcCompat="@drawable/ic_astronomical_twilight" />
+
+                <TextView
+                    android:id="@+id/tv_astronomical_twilight_end"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="14"
+                    android:gravity="center_vertical"
+                    android:text="@string/text_astronomical_twiligt_end" />
+
+                <TextView
+                    android:id="@+id/tv_astronomical_twilight_end_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="16"
+                    android:gravity="center"
+                    android:text="TextView" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="24"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="21"
+                    app:srcCompat="@drawable/ic_nautical_twilight" />
+
+                <TextView
+                    android:id="@+id/tv_nautical_twilight_begin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="14"
+                    android:gravity="center_vertical"
+                    android:text="@string/text_nautical_twilight_begin" />
+
+                <TextView
+                    android:id="@+id/tv_nautical_twilight_begin_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="16"
+                    android:gravity="center"
+                    android:text="TextView" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="24"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView9"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="21"
+                    app:srcCompat="@drawable/ic_nautical_twilight" />
+
+                <TextView
+                    android:id="@+id/tv_nautical_twilight_end"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="14"
+                    android:gravity="center_vertical"
+                    android:text="@string/text_nautical_twilight_end" />
+
+                <TextView
+                    android:id="@+id/tv_nautical_twilight_end_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="16"
+                    android:gravity="center"
+                    android:text="TextView" />
+            </LinearLayout>
+
+        </LinearLayout>
     </LinearLayout>
 
 
