--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
         <color name="blue">#0000FF</color>
         <color name="navy">#000080</color>
         <color name="black">#000000</color>
-    <color name="transparent">#00000000 </color>
-    <color name="black_transparent">#08000000 </color>
+    <color name="transparent">#00000000</color>
+    <color name="black_transparent">#08000000</color>
+    <color name="gray_transparent">#08000000</color>
 </resources>
