--- a/app/src/main/res/layout/list_item_info_card.xml
+++ b/app/src/main/res/layout/list_item_info_card.xml
@@ -146,8 +146,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="TextView" />
+                        android:gravity="center" />
 
                 </LinearLayout>
 
