--- a/app/src/main/res/menu/activity_sidebar_info_cards_drawer.xml
+++ b/app/src/main/res/menu/activity_sidebar_info_cards_drawer.xml
@@ -1,25 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="navigation_view">
+    tools:showIn="nav_view_info_cards">
 
     <group android:checkableBehavior="single">
+
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Import" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="" />
+            android:id="@+id/nav_delete"
+            android:icon="@drawable/ic_trash"
+            android:title="Clear" />
     </group>
 
     <item android:title="Communicate">
