--- a/app/src/main/res/menu/activity_sidebar_map_drawer.xml
+++ b/app/src/main/res/menu/activity_sidebar_map_drawer.xml
@@ -5,17 +5,18 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_info"
             android:icon="@drawable/ic_check_circle"
-            android:title="Watch info" />
+            android:title="Go to info" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_clear"
             android:icon="@drawable/ic_trash"
             android:title="Clear" />
         <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/nav_my_location"
+            android:icon="@drawable/ic_person_pin_circle_24px"
+            android:title="My location" />
+
     </group>
 
     <item android:title="Communicate">
@@ -23,11 +24,8 @@
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="Developer" />
+
         </menu>
     </item>
 
