--- a/app/src/main/res/layout/list_item_info_card.xml
+++ b/app/src/main/res/layout/list_item_info_card.xml
@@ -132,6 +132,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:visibility="invisible"
                         android:id="@+id/imageView5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
